# lich

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICH_AI_AGENT_REFERENCE.md  LICH_AI_PROMPT.md  LICH_IMPROVEMENTS.md  LICH_TASKS.md  README.md  agentlog.md  global.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
cli/: README.md  pyproject.toml
cli/src/lich/: __init__.py  cli.py  server.py  version_check.py
cli/src/lich/commands/: adopt.py  backup.py  ci.py  dev.py  git.py  init.py  lint.py  make.py  middleware.py  production_ready.py  routes.py  secret.py  security.py  seed.py  shell.py  test.py  upgrade.py  version.py
cli/src/lich/mcp/: server.py
cli/src/lich/mcp/tools/: production.py  project.py  qa.py  routes.py
cli/src/lich_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cli/tests/: conftest.py  test_adopt.py  test_mcp_server.py  test_version.py
docs/: AI_RULES.md
docs-for-update/: auth-jwt-fullstack.md
docs/wiki/: AI_ENFORCEMENT.md  AUTHORIZATION_POLICIES.md  AUTH_AND_POLICY.md  BACKGROUND_JOBS.md  CLI_REFERENCE.md  EVENTS_LISTENERS.md  FACTORY_GUIDE.md  MIDDLEWARE_GUIDE.md  README.md  SETUP_GUIDE.md
site-docs/: index.fa.md  index.md
site-docs/architecture/: api.fa.md  api.md  entities.fa.md  entities.md  overview.fa.md  overview.md  ports-adapters.fa.md  ports-adapters.md  services.fa.md  services.md  workers.fa.md  workers.md
site-docs/best-practices/: ai.fa.md  ai.md  git-workflow.fa.md  git-workflow.md  release-workflow.md  security.fa.md  security.md  (+2 more)
template/: cookiecutter.json
(+215 files in other folders)
